--- a/configs/official/official.config
+++ b/configs/official/official.config
@@ -9,10 +9,10 @@ CONFIG_TARGET_ROOTFS_TARGZ=y
 CONFIG_TARGET_ROOTFS_EXT4FS=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
-CONFIG_PACKAGE_hostapd=y
-CONFIG_PACKAGE_hostapd-basic=y
-CONFIG_PACKAGE_hostapd-utils=y
-CONFIG_PACKAGE_hostapd-common=y
+#CONFIG_PACKAGE_hostapd=y
+#CONFIG_PACKAGE_hostapd-basic=y
+#CONFIG_PACKAGE_hostapd-utils=y
+#CONFIG_PACKAGE_hostapd-common=y
 CONFIG_DRIVER_11AC_SUPPORT=y
 CONFIG_DRIVER_11N_SUPPORT=y
 CONFIG_DRIVER_11W_SUPPORT=y
@@ -147,54 +147,54 @@ CONFIG_PACKAGE_luci=y
 CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_default-settings=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-aria2=y
-CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-brook-server=y
-CONFIG_PACKAGE_luci-app-cifs-mount=y
-CONFIG_PACKAGE_luci-app-commands=y
+#CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-aria2=y
+#CONFIG_PACKAGE_luci-app-arpbind=y
+#CONFIG_PACKAGE_luci-app-autoreboot=y
+#CONFIG_PACKAGE_luci-app-brook-server=y
+#CONFIG_PACKAGE_luci-app-cifs-mount=y
+#CONFIG_PACKAGE_luci-app-commands=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
-CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_luci-app-familycloud=y
-CONFIG_PACKAGE_luci-app-fileassistant=y
-CONFIG_PACKAGE_luci-app-filetransfer=y
+#CONFIG_PACKAGE_luci-app-ddns=y
+#CONFIG_PACKAGE_luci-app-diskman=y
+#CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
+#CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
+#CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
+#CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
+#CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
+#CONFIG_PACKAGE_luci-app-dockerman=y
+#CONFIG_PACKAGE_luci-app-familycloud=y
+#CONFIG_PACKAGE_luci-app-fileassistant=y
+#CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-app-ipsec-server=y
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+#CONFIG_PACKAGE_luci-app-frpc=y
+#CONFIG_PACKAGE_luci-app-hd-idle=y
+#CONFIG_PACKAGE_luci-app-ipsec-server=y
+#CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-iptvhelper=y
-CONFIG_PACKAGE_luci-app-mentohust=y
+@CONFIG_PACKAGE_luci-app-mentohust=y
 CONFIG_PACKAGE_luci-app-mia=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-mjpg-streamer=y
 CONFIG_PACKAGE_luci-app-n2n_v2=y
 CONFIG_PACKAGE_luci-app-netdata=y
-CONFIG_PACKAGE_luci-app-nfs=y
-CONFIG_PACKAGE_luci-app-nft-qos=y
+#CONFIG_PACKAGE_luci-app-nfs=y
+#CONFIG_PACKAGE_luci-app-nft-qos=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
-CONFIG_PACKAGE_luci-app-nps=y
-CONFIG_PACKAGE_luci-app-ntpc=y
-CONFIG_PACKAGE_luci-app-onliner=y
-CONFIG_PACKAGE_luci-app-openclash=y
-CONFIG_PACKAGE_luci-app-openvpn=y
+#CONFIG_PACKAGE_luci-app-nps=y
+#CONFIG_PACKAGE_luci-app-ntpc=y
+#CONFIG_PACKAGE_luci-app-onliner=y
+#CONFIG_PACKAGE_luci-app-openclash=y
+#CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Server=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Server=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=n
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun=y
@@ -203,46 +203,46 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple-obfs=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin=y
-CONFIG_PACKAGE_luci-app-ps3netsrv=y
-CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-serverchan=y
-CONFIG_PACKAGE_luci-app-shairplay=y
-CONFIG_PACKAGE_luci-app-smartdns=y
+#CONFIG_PACKAGE_luci-app-ps3netsrv=y
+#CONFIG_PACKAGE_luci-app-samba4=y
+#CONFIG_PACKAGE_luci-app-serverchan=y
+#CONFIG_PACKAGE_luci-app-shairplay=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-softethervpn=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
-CONFIG_PACKAGE_luci-app-ssr-mudb-server=y
+#CONFIG_PACKAGE_luci-app-ssr-mudb-server=y
 CONFIG_PACKAGE_luci-app-timewol=y
-CONFIG_PACKAGE_luci-app-tinyproxy=y
-CONFIG_PACKAGE_luci-app-transmission=y
-CONFIG_PACKAGE_luci-app-trojan-server=y
+#CONFIG_PACKAGE_luci-app-tinyproxy=y
+#CONFIG_PACKAGE_luci-app-transmission=y
+#CONFIG_PACKAGE_luci-app-trojan-server=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-udpxy=y
-CONFIG_PACKAGE_luci-app-unblockmusic=y
-CONFIG_UnblockNeteaseMusic_Go=y
-CONFIG_UnblockNeteaseMusic_NodeJS=y
-CONFIG_PACKAGE_luci-app-upnp=y
+#CONFIG_PACKAGE_luci-app-udpxy=y
+#CONFIG_PACKAGE_luci-app-unblockmusic=y
+#CONFIG_UnblockNeteaseMusic_Go=y
+#CONFIG_UnblockNeteaseMusic_NodeJS=y
+#CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-uugamebooster=y
-CONFIG_PACKAGE_luci-app-vsftpd=y
-CONFIG_PACKAGE_luci-app-watchcat=y
+#CONFIG_PACKAGE_luci-app-uugamebooster=y
+#CONFIG_PACKAGE_luci-app-vsftpd=y
+#CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-weburl=y
 CONFIG_PACKAGE_luci-app-wifischedule=y
-CONFIG_PACKAGE_luci-app-wireguard=y
-CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-xlnetacc=y
-CONFIG_PACKAGE_luci-app-zerotier=y
-CONFIG_PACKAGE_luci-udptools=y
+#CONFIG_PACKAGE_luci-app-wireguard=y
+#CONFIG_PACKAGE_luci-app-wol=y
+#CONFIG_PACKAGE_luci-app-xlnetacc=y
+#CONFIG_PACKAGE_luci-app-zerotier=y
+#CONFIG_PACKAGE_luci-udptools=y
 CONFIG_PACKAGE_luci-proto-bonding=y
 CONFIG_PACKAGE_luci-proto-openconnect=y
 CONFIG_PACKAGE_luci-proto-relay=y
@@ -252,30 +252,30 @@ CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_libpam=y
 CONFIG_PACKAGE_libunwind=y
 
-CONFIG_LUCI_LANG_ca=y
-CONFIG_LUCI_LANG_cs=y
-CONFIG_LUCI_LANG_de=y
-CONFIG_LUCI_LANG_el=y
-CONFIG_LUCI_LANG_es=y
-CONFIG_LUCI_LANG_fr=y
-CONFIG_LUCI_LANG_he=y
-CONFIG_LUCI_LANG_hu=y
-CONFIG_LUCI_LANG_it=y
-CONFIG_LUCI_LANG_ja=y
-CONFIG_LUCI_LANG_ko=y
-CONFIG_LUCI_LANG_ms=y
-CONFIG_LUCI_LANG_no=y
-CONFIG_LUCI_LANG_pl=y
-CONFIG_LUCI_LANG_pt=y
-CONFIG_LUCI_LANG_pt-br=y
-CONFIG_LUCI_LANG_ro=y
-CONFIG_LUCI_LANG_ru=y
-CONFIG_LUCI_LANG_sk=y
-CONFIG_LUCI_LANG_sv=y
-CONFIG_LUCI_LANG_tr=y
-CONFIG_LUCI_LANG_uk=y
-CONFIG_LUCI_LANG_vi=y
-CONFIG_LUCI_LANG_zh-tw=y
+#CONFIG_LUCI_LANG_ca=y
+#CONFIG_LUCI_LANG_cs=y
+#CONFIG_LUCI_LANG_de=y
+#CONFIG_LUCI_LANG_el=y
+#CONFIG_LUCI_LANG_es=y
+#CONFIG_LUCI_LANG_fr=y
+#CONFIG_LUCI_LANG_he=y
+#CONFIG_LUCI_LANG_hu=y
+#CONFIG_LUCI_LANG_it=y
+#CONFIG_LUCI_LANG_ja=y
+#CONFIG_LUCI_LANG_ko=y
+#CONFIG_LUCI_LANG_ms=y
+#CONFIG_LUCI_LANG_no=y
+#CONFIG_LUCI_LANG_pl=y
+#CONFIG_LUCI_LANG_pt=y
+#CONFIG_LUCI_LANG_pt-br=y
+#CONFIG_LUCI_LANG_ro=y
+#CONFIG_LUCI_LANG_ru=y
+#CONFIG_LUCI_LANG_sk=y
+#CONFIG_LUCI_LANG_sv=y
+#CONFIG_LUCI_LANG_tr=y
+#CONFIG_LUCI_LANG_uk=y
+#CONFIG_LUCI_LANG_vi=y
+#CONFIG_LUCI_LANG_zh-tw=y
 
 CONFIG_PACKAGE_ariang=y
 CONFIG_ARIA2_ASYNC_DNS=y
